--- a/FunctionPainterV1.3/.classpath
+++ b/FunctionPainterV1.3/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/beautyeye_lnf.jar"/>
+	<classpathentry kind="src" path="/CodeReader"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
