--- a/FunctionPainterV1.3/.project
+++ b/FunctionPainterV1.3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FunctionPainterV1.3</name>
+	<name>FunctionPainter</name>
 	<comment></comment>
 	<projects>
 	</projects>
